--- a/report.html
+++ b/report.html
@@ -54,7 +54,7 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td>%%JOBNAME%%</td>
+				<td>%%JOBNAMEe%%</td>
 				<td>%%BUILDNO%%</td>
 				<td>%%DATE%%</td>
 				<td>%%BUILD_STATUS%%</td>
