--- a/report.html
+++ b/report.html
@@ -44,7 +44,7 @@
 	<table class="preview">
 		<thead>
 			<tr>
-				<th>Job Name</th>
+				<th>Job Namee</th>
 				<th>Build No</th>
 				<th>Date</th>
 				<th>Build Status</th>
