--- a/report.html
+++ b/report.html
@@ -55,7 +55,7 @@
 		<tbody>
 			<tr>
 				<td>%%JOBNAMEe%%</td>
-				<td>%%BUILDNO%%</td>
+				<td>%%BUILDNOl%%</td>
 				<td>%%DATE%%</td>
 				<td>%%BUILD_STATUS%%</td>
 				<td>%%ERROR%%</td>
